# sgfcup

./: .flaskenv  .gitignore  Makefile  README.md  database.sql  db.py  insert_filesizes.py  migrate.py  pyproject.toml  runserver.py
migrations/: 001_innodb.sql  002_pastes.sql  003_settings_pickle_to_json.py  004_file_details.py  __init__.py
project/: __init__.py  config.example.py  configdefines.py  constants.py  extensions.py  functions.py  jsonsettings.py  picklesettings.py  routes.py  user_settings.json  usersettings.py
project/controllers/: __init__.py  admin.py  gallery.py  image.py  oauth.py  puush.py  settings.py  static.py  upload.py  view.py
project/forms/: __init__.py  admin.py  gallery.py  paste.py
project/services/: account.py  file.py  gallery.py  oauth.py  paste.py
project/static/css/: common.js  dropzone.css  gallery.css  index.css  jquery.js  jquery_003.js  loader.css  main.css  min.Stats.js  min.common.js  min.jcanvas.js  min.jquery.js  min.jquery_002.js  min.jquery_003.js  normalize.css  paste.css  settings.css  style.css
project/static/js/: base.js  edit.js  gallery.js  index.js  pastebin.js
project/views/: admin.tpl  admin_login.tpl  base.tpl  delete.tpl  delete_advanced.tpl  error.tpl  gallery.tpl  gallery_auth.tpl  general.tpl  index.tpl  login.tpl  main.css  new_gallery.tpl  oauth_link.tpl  paste.tpl  pastebin.tpl  settings.tpl  utils.tpl
