[tool.poetry]
name = "sgfcup"
version = "0.1.0"
description = ""
authors = ["russelg <isaac.drew@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beaker = "^1.11.0"
bottle = { git = "https://github.com/bottlepy/bottle.git" }
bottle-beaker = "^0.1.3"
cymysql = "^0.9.15"
ghdiff = "^0.4"
jinja2 = "^2.11.2"
jsonmerge = "^1.7.0"
pillow = "^7.2.0"
pycryptodome = "^3.9.8"
pygments = "^2.7.1"
python-magic = "^0.4.18"
tornado = "^6.0.4"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
raven = "^6.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
