[tool.poetry]
name = "sgfcup"
version = "0.1.0"
description = ""
authors = ["russelg <isaac.drew@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cymysql = "^0.9.15"
ghdiff = "^0.4"
jinja2 = "^2.11.2"
jsonmerge = "^1.7.0"
pillow = "^7.2.0"
pycryptodome = "^3.9.8"
pygments = "^2.7.1"
python-magic = "^0.4.18"
tornado = "^6.0.4"
typing_extensions = "^3.7.4"
Flask = "^1.1.2"
sentry-sdk = {extras = ["flask"], version = "^0.19.1"}
PyMySQL = "^0.10.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
raven = "^6.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
